--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -45,16 +45,18 @@
 <header class="govuk-header " role="banner" data-module="govuk-header">
   <div class="govuk-header__container govuk-width-container">
     <div class="govuk-header__logo">
-      <a href="{{ url_for('main.index') }}" class="govuk-header__link govuk-header__link--homepage">
-        DLUHC Datasets
+      <a href="https://www.planning.data.gov.uk/" class="govuk-header__link govuk-header__link--homepage">
+        Planning data
       </a>
     </div>
     <div class="govuk-header__content">
-      {# <a href="#" class="govuk-header__link govuk-header__service-name">
-        Dataset manager
-      </a> #}
-      <nav aria-label="Menu" class="govuk-header__navigation govuk-header__navigation--end">
-        <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" hidden>Menu</button>
+      <a href="{{ url_for('main.index') }}" class="govuk-header__link govuk-header__service-name">
+        Dataset editor
+      </a>
+      <nav aria-label="Menu" class="govuk-header__navigation">
+        <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" hidden>
+          Menu
+        </button>
         <ul id="navigation" class="govuk-header__navigation-list">
           <li class="govuk-header__navigation-item">
             <a class="govuk-header__link" href="{{ url_for('main.index') }}">
