--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -4,7 +4,7 @@
 
 <div class="app-grid-row app-grid-row--space-between govuk-!-margin-bottom-3">
   <div class="app-grid-column">
-    {% if session["user"] and not history %}
+    {% if session["user"] and not history and not dataset.end_date %}
       {{
         buttonMenu({
           "classes": "govuk-!-margin-bottom-6",
@@ -25,77 +25,85 @@
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    {% if records | length > 0 %}
-    <section class="app-table-container">
-      <table class="app-data-table">
-        <thead class="app-data-table__head">
-          <tr class="app-data-table__row">
-            {% for field in dataset.sorted_fields() %}
-              <th scope="col" class="app-data-table__header">
-                <span class="app-data-table__header__label">{{ field.field }}</span>
-              </th>
+    {% if not dataset.end_date %}
+      {% if records | length > 0 %}
+      <section class="app-table-container">
+        <table class="app-data-table">
+          <thead class="app-data-table__head">
+            <tr class="app-data-table__row">
+              {% for field in dataset.sorted_fields() %}
+                <th scope="col" class="app-data-table__header">
+                  <span class="app-data-table__header__label">{{ field.field }}</span>
+                </th>
+              {% endfor %}
+              {% if session["user"] %}
+                <th scope="col" class="app-data-table__header app-data-table__header--ui">
+                  <span class="govuk-visually-hidden">Action</span>
+                </th>
+              {% endif %}
+            </tr>
+          </thead>
+          <tbody class="app-data-table__body">
+            {% for record in records %}
+            <tr class="app-data-table__row">
+              {% for field in dataset.sorted_fields() %}
+                <td class="app-data-table__cell">{{ record.get(field.field, None)| value_or_empty_string | replace('-','&#8209;') | safe }}</td>
+              {% endfor %}
+              {% if session["user"] and not record.end_date %}
+              <td class="app-data-table__cell app-data-table__cell--ui">
+                {{
+                  buttonMenu({
+                    "items": [
+                      {
+                        "element": "a",
+                        "text": "Edit record",
+                        "classes": "govuk-button--secondary",
+                        "href": url_for("main.edit_record", id=dataset.dataset, record_id=record.id),
+                      },
+                      {
+                        "element": "a",
+                        "text": "Archive record",
+                        "classes": "govuk-button--secondary",
+                        "href": url_for("main.archive_record", id=dataset.dataset, record_id=record.id),
+                      }
+                    ]
+                  })
+                }}
+              </td>
+              {% endif %}
+            </tr>
             {% endfor %}
-            {% if session["user"] %}
-              <th scope="col" class="app-data-table__header app-data-table__header--ui">
-                <span class="govuk-visually-hidden">Action</span>
-              </th>
-            {% endif %}
-          </tr>
-        </thead>
-        <tbody class="app-data-table__body">
-          {% for record in records %}
-          <tr class="app-data-table__row">
-            {% for field in dataset.sorted_fields() %}
-              <td class="app-data-table__cell">{{ record.get(field.field, None)| value_or_empty_string | replace('-','&#8209;') | safe }}</td>
-            {% endfor %}
-            {% if session["user"] and not record.end_date %}
-            <td class="app-data-table__cell app-data-table__cell--ui">
-              {{
-                buttonMenu({
-                  "items": [
-                    {
-                      "element": "a",
-                      "text": "Edit record",
-                      "classes": "govuk-button--secondary",
-                      "href": url_for("main.edit_record", id=dataset.dataset, record_id=record.id),
-                    },
-                    {
-                      "element": "a",
-                      "text": "Archive record",
-                      "classes": "govuk-button--secondary",
-                      "href": url_for("main.archive_record", id=dataset.dataset, record_id=record.id),
-                    }
-                  ]
-                })
-              }}
-            </td>
-            {% endif %}
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </section>
-    <p class="govuk-hint govuk-!-margin-top-3">This dataset was last updated on {{dataset.last_updated.strftime("%d %B %Y")}}</p>
-    {% if history %}
-      <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset, history=True)}}">Download a csv file of the current data</a></p>
-    {% else %}
-      <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset)}}">Download a csv file of this data</a></p>
-      {% if session["user"] %}
-      <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.update_csv', dataset=dataset.dataset)}}">Upload a csv
-          file of updates for this dataset</a></p>
+          </tbody>
+        </table>
+      </section>
+      <p class="govuk-hint govuk-!-margin-top-3">This dataset was last updated on {{dataset.last_updated.strftime("%d %B %Y")}}</p>
+      {% if history %}
+        <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset, history=True)}}">Download a csv file of the current data</a></p>
+      {% else %}
+        <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('main.csv', id=dataset.dataset)}}">Download a csv file of this data</a></p>
+        {% if session["user"] %}
+          <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.update_csv', dataset=dataset.dataset)}}">Upload a csv
+            file of updates for this dataset</a></p>
+        {% endif %}
       {% endif %}
-    {% endif %}
-    {% else %}
-      {{
-        govukInsetText({
-          'text': 'There are no records for the ' + dataset.name + ' dataset'
-        })
-      }}
-      {% if session["user"] %}
-        <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.upload_csv', dataset=dataset.dataset)}}">Upload a csv file for this dataset</a></p>
+      {% else %}
+        {{
+          govukInsetText({
+            'text': 'There are no records for the ' + dataset.name + ' dataset'
+          })
+        }}
+        {% if session["user"] %}
+          <p class="govuk-body govuk-!-margin-top-3"><a href="{{url_for('upload.upload_csv', dataset=dataset.dataset)}}">Upload a csv file for this dataset</a></p>
+        {% endif %}
       {% endif %}
-    {% endif %}
-  </div>
+    </div>
+  {% else %}
+    {{
+      govukInsetText({
+        'text': 'This dataset has been archived and is no longer available for editing.'
+      })
+    }}
+  {% endif %}
 </div>
 
 {% endblock content_primary %}
