--- a/application/templates/support.html
+++ b/application/templates/support.html
@@ -4,7 +4,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     <h1 class="govuk-heading-l">Support</h1>
-    <p class="govuk-body">This is currently an experimental service. If you need help or support you can email <a href="mailto:digitalland@levellingup.gov.uk">digitalland@levellingup.gov.uk</a>.</p>
+    <p class="govuk-body">This is currently an experimental service. If you need help or support you can email <a href="mailto:digitalland@communities.gov.uk">digitalland@communities.gov.uk</a>.</p>
     <p class="govuk-body">We aim to respond to all requests within 2 working days.</p>
 
     <h1 class="govuk-heading-l">How this works</h1>
