Add section to finder page linking to discussions

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -9,6 +9,7 @@ $govuk-new-link-styles: true;
 @import "components/button-menu";
 @import "components/table";
 @import "components/section-nav";
+@import "components/contribute-panel";
 
 // app specific component scss
 .app-list--inline {
