--- a/application/templates/category-finder.html
+++ b/application/templates/category-finder.html
@@ -54,4 +54,14 @@
   </div>
 </div>
 
+<div class='govuk-grid-row'>
+  <div class='govuk-grid-column-full'>
+    <div class="app-contribute-panel">
+      <div class="app-contribute-panel__content">
+        <h2 class="govuk-heading-m">Noticed something wrong?</h2>
+        <p class="govuk-body">If you have noticed an issue with this list of values in this dataset, contact the team on the <a href="https://github.com/digital-land/data-standards-backlog/discussions" class="govuk-link">discussion threads</a>.</p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
