--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -8156,6 +8156,28 @@ p + .govuk-heading-s,
   }
 }
 
+.dl-code-block {
+  background: #f4f4f4;
+  color: #333;
+  page-break-inside: avoid;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  line-height: 1.3;
+  margin: 0;
+  max-width: 100%;
+  overflow-y: scroll;
+  padding: 15px;
+  display: block;
+  word-wrap: break-word;
+  max-height: 12em;
+  font-size: 1rem;
+}
+
+.dl-code-block--inline {
+  display: inline-block;
+  padding: 5px 10px;
+  vertical-align: middle;
+}
+
 .dl-back-to-top {
   margin-top: 20px;
   margin-bottom: 30px;
@@ -10481,6 +10503,15 @@ html, body {
   display: inline-block;
   padding: 3px 8px;
   background: #f4f4f4;
+}
+
+.dl-code-block--small {
+  font-size: 14px;
+}
+@media (min-width: 40.0625em) {
+  .dl-code-block--small {
+    font-size: 16px;
+  }
 }
 
 /*# sourceMappingURL=application.css.map */
