use value instead of reference

--- a/application/templates/finder.html
+++ b/application/templates/finder.html
@@ -11,9 +11,9 @@
 
 <div class='govuk-grid-row'>
   <div class='govuk-grid-column-two-thirds'>
-    <p class="govuk-body-l">Use this page to find the reference for the {{ dataset.name }} you need to include in your data.</p>
-    <p class="govuk-body">There are datasets that have {{ dataset.name }} as field. The value you put in this field must be one of the references on this page.</p>
-    <p class="govuk-body">If the field accepts multiple values separated by a <code>;</code> then each instance should be a reference from the list below.</p>
+    <p class="govuk-body-l">Use this page to find the value for the {{ dataset.name }} you need to include in your data.</p>
+    <p class="govuk-body">There are datasets that have {{ dataset.name }} as a field. The value you put in this field must be one of the values on this page.</p>
+    <p class="govuk-body">If the field accepts multiple values separated by a <code>;</code> then each instance should be a value from the list below.</p>
 
     <h3 class="govuk-heading-m">Where is this field used</h3>
     <ul class="govuk-list govuk-list--bullet">
@@ -26,8 +26,8 @@
 
 <div class='govuk-grid-row'>
   <div class='govuk-grid-column-two-thirds'>
-    <h3 class="govuk-heading-l govuk-!-margin-top-6">Find reference</h3>
-    <p class="govuk-body">Below is a list of all the {{ dataset.name }} records. Find the one you need and use the reference in your data.</p>
+    <h3 class="govuk-heading-l govuk-!-margin-top-6">Find value to use in your data</h3>
+    <p class="govuk-body">Below is a list of all the {{ dataset.name }} records. Find the one you need and use the value in your data.</p>
   </div>
 </div>
 
@@ -51,7 +51,7 @@
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Name</th>
             <th scope="col" class="govuk-table__header">Description</th>
-            <th scope="col" class="govuk-table__header">Reference</th>
+            <th scope="col" class="govuk-table__header">Value</th>
           </tr>
         </thead>
         <tbody>
