--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -55,7 +55,7 @@
 
 
 :root {
-  --govuk-frontend-version: "4.8.0";
+  --govuk-frontend-version: "4.9.0";
 }
 
 
@@ -2173,7 +2173,7 @@ p + .govuk-heading-s,
   border-radius: 0;
   color: #ffffff;
   background-color: #00703c;
-  box-shadow: 0 2px 0 #002d18;
+  box-shadow: 0 2px 0 rgb(0, 44.8, 24);
   text-align: center;
   vertical-align: top;
   cursor: pointer;
@@ -2216,7 +2216,7 @@ p + .govuk-heading-s,
   border: 0;
 }
 .govuk-button:hover {
-  background-color: #005a30;
+  background-color: rgb(0, 89.6, 48);
 }
 .govuk-button:active {
   top: 2px;
@@ -2261,18 +2261,18 @@ p + .govuk-heading-s,
 .govuk-button[disabled=disabled]:active,
 .govuk-button[disabled]:active {
   top: 0;
-  box-shadow: 0 2px 0 #002d18;
+  box-shadow: 0 2px 0 rgb(0, 44.8, 24);
 }
 
 .govuk-button--secondary {
   background-color: #f3f2f1;
-  box-shadow: 0 2px 0 #929191;
+  box-shadow: 0 2px 0 rgb(145.8, 145.2, 144.6);
 }
 .govuk-button--secondary, .govuk-button--secondary:link, .govuk-button--secondary:visited, .govuk-button--secondary:active, .govuk-button--secondary:hover {
   color: #0b0c0c;
 }
 .govuk-button--secondary:hover {
-  background-color: #dbdad9;
+  background-color: rgb(218.7, 217.8, 216.9);
 }
 .govuk-button--secondary:hover[disabled] {
   background-color: #f3f2f1;
@@ -2280,13 +2280,13 @@ p + .govuk-heading-s,
 
 .govuk-button--warning {
   background-color: #d4351c;
-  box-shadow: 0 2px 0 #55150b;
+  box-shadow: 0 2px 0 rgb(84.8, 21.2, 11.2);
 }
 .govuk-button--warning, .govuk-button--warning:link, .govuk-button--warning:visited, .govuk-button--warning:active, .govuk-button--warning:hover {
   color: #ffffff;
 }
 .govuk-button--warning:hover {
-  background-color: #aa2a16;
+  background-color: rgb(169.6, 42.4, 22.4);
 }
 .govuk-button--warning:hover[disabled] {
   background-color: #d4351c;
@@ -2294,13 +2294,13 @@ p + .govuk-heading-s,
 
 .govuk-button--inverse {
   background-color: #ffffff;
-  box-shadow: 0 2px 0 #144e81;
+  box-shadow: 0 2px 0 rgb(20.3, 78.4, 128.8);
 }
 .govuk-button--inverse, .govuk-button--inverse:link, .govuk-button--inverse:visited, .govuk-button--inverse:active, .govuk-button--inverse:hover {
   color: #1d70b8;
 }
 .govuk-button--inverse:hover {
-  background-color: #e8f1f8;
+  background-color: rgb(232.4, 240.7, 247.9);
 }
 .govuk-button--inverse:hover[disabled] {
   background-color: #ffffff;
@@ -3082,7 +3082,6 @@ p + .govuk-heading-s,
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: "tnum" 1;
   font-feature-settings: "tnum" 1;
   font-weight: 400;
   margin-top: 0;
@@ -3095,7 +3094,6 @@ p + .govuk-heading-s,
 }
 @supports (font-variant-numeric: tabular-nums) {
   .govuk-character-count__message {
-    -webkit-font-feature-settings: normal;
     font-feature-settings: normal;
     font-variant-numeric: tabular-nums;
   }
@@ -3204,7 +3202,6 @@ p + .govuk-heading-s,
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: "tnum" 1;
   font-feature-settings: "tnum" 1;
   font-weight: 400;
   letter-spacing: 0.05em;
@@ -3216,7 +3213,6 @@ p + .govuk-heading-s,
 }
 @supports (font-variant-numeric: tabular-nums) {
   .govuk-input--extra-letter-spacing {
-    -webkit-font-feature-settings: normal;
     font-feature-settings: normal;
     font-variant-numeric: tabular-nums;
   }
@@ -3647,7 +3643,7 @@ p + .govuk-heading-s,
   color: #d4351c;
 }
 .govuk-error-summary__list a:hover {
-  color: #942514;
+  color: rgb(148.4, 37.1, 19.6);
 }
 .govuk-error-summary__list a:active {
   color: #d4351c;
@@ -4012,17 +4008,14 @@ p + .govuk-heading-s,
   margin: 0;
   padding: 0;
   list-style: none;
-  -webkit-column-gap: 30px;
   column-gap: 30px;
 }
 
 @media (min-width: 48.0625em) {
   .govuk-footer__list--columns-2 {
-    -webkit-column-count: 2;
     column-count: 2;
   }
   .govuk-footer__list--columns-3 {
-    -webkit-column-count: 3;
     column-count: 3;
   }
 }
@@ -4727,7 +4720,7 @@ p + .govuk-heading-s,
   color: #00703c;
 }
 .govuk-notification-banner--success .govuk-notification-banner__link:hover {
-  color: #004e2a;
+  color: rgb(0, 78.4, 42);
 }
 .govuk-notification-banner--success .govuk-notification-banner__link:active {
   color: #00703c;
@@ -5170,48 +5163,48 @@ p + .govuk-heading-s,
 }
 
 .govuk-tag--grey {
-  color: #383f43;
-  background: #eeefef;
+  color: rgb(56, 63, 66.5);
+  background: rgb(237.5, 238.5, 239);
 }
 
 .govuk-tag--purple {
-  color: #3d2375;
-  background: #dbd5e9;
+  color: rgb(60.8, 35.2, 116.8);
+  background: rgb(219.2, 212.8, 233.2);
 }
 
 .govuk-tag--turquoise {
-  color: #10403c;
-  background: #bfe3e0;
+  color: rgb(16, 64.4, 60.4);
+  background: rgb(190.5, 226.8, 223.8);
 }
 
 .govuk-tag--blue {
-  color: #144e81;
-  background: #d2e2f1;
+  color: rgb(20.3, 78.4, 128.8);
+  background: rgb(209.8, 226.4, 240.8);
 }
 
 .govuk-tag--yellow {
-  color: #594d00;
-  background: #fff7bf;
+  color: rgb(89.25, 77.35, 0);
+  background: rgb(255, 246.5, 191.25);
 }
 
 .govuk-tag--orange {
-  color: #6e3619;
-  background: #fcd6c3;
+  color: rgb(109.8, 53.55, 25.2);
+  background: rgb(251.7, 214.2, 195.3);
 }
 
 .govuk-tag--red {
-  color: #942514;
-  background: #f6d7d2;
+  color: rgb(148.4, 37.1, 19.6);
+  background: rgb(246.4, 214.6, 209.6);
 }
 
 .govuk-tag--pink {
-  color: #80224d;
-  background: #f7d7e6;
+  color: rgb(127.8, 33.6, 76.8);
+  background: rgb(246.6, 215.2, 229.6);
 }
 
 .govuk-tag--green {
-  color: #005a30;
-  background: #cce2d8;
+  color: rgb(0, 89.6, 48);
+  background: rgb(204, 226.4, 216);
 }
 
 
@@ -6323,7 +6316,6 @@ p + .govuk-heading-s,
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: "tnum" 1;
   font-feature-settings: "tnum" 1;
   font-weight: 400;
 }
@@ -6334,7 +6326,6 @@ p + .govuk-heading-s,
 }
 @supports (font-variant-numeric: tabular-nums) {
   .govuk-table__cell--numeric {
-    -webkit-font-feature-settings: normal;
     font-feature-settings: normal;
     font-variant-numeric: tabular-nums;
   }
@@ -8620,7 +8611,7 @@ p + .govuk-heading-s,
   border-bottom: 1px solid #ffffff;
   border-left: 1px solid #ffffff;
   color: #ffffff;
-  background: rgba(189, 47, 25, 0.9);
+  background: rgba(189.475, 47.36875, 25.025, 0.9);
   text-transform: uppercase;
 }
 @media print {
@@ -9271,7 +9262,7 @@ p + .govuk-heading-s,
   text-decoration: none;
 }
 .dl-hero__button:hover, .dl-hero__button:focus {
-  background-color: #f2f2f2;
+  background-color: rgb(242.25, 242.25, 242.25);
 }
 
 .dl-list-filter__label {
@@ -9395,7 +9386,7 @@ p + .govuk-heading-s,
   cursor: pointer;
 }
 .dl-map__layer-item .govuk-checkboxes__item:hover .govuk-checkboxes__label:before {
-  box-shadow: 0 0 0 10px #cfcecd;
+  box-shadow: 0 0 0 10px rgb(206.55, 205.7, 204.85);
 }
 .dl-map__layer-item .govuk-checkboxes__input {
   right: -10px;
@@ -9665,7 +9656,7 @@ p + .govuk-heading-s,
   }
 }
 .zoom-controls__btn:hover {
-  background: #f2f2f2;
+  background: rgb(242.25, 242.25, 242.25);
   cursor: pointer;
 }
 .zoom-controls__btn:focus, .zoom-controls__btn:active {
@@ -9784,8 +9775,8 @@ p + .govuk-heading-s,
   display: block;
   margin-left: -7px;
   padding: 4px 7px;
-  color: #594d00;
-  background: #fff7bf;
+  color: rgb(89.25, 77.35, 0);
+  background: rgb(255, 246.5, 191.25);
 }
 
 .dl-map__error {
@@ -9935,7 +9926,7 @@ p + .govuk-heading-s,
   color: #1d70b8;
 }
 .dl-subnav__list-item__link:hover {
-  color: #5694ca;
+  color: rgb(85.5, 147.75, 201.75);
 }
 .dl-subnav__list-item__link:focus {
   position: relative;
@@ -10295,7 +10286,6 @@ html, body {
   font-family: "GDS Transport", arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: "tnum" 1;
   font-feature-settings: "tnum" 1;
   font-weight: 700;
   font-size: 16px;
@@ -10309,7 +10299,6 @@ html, body {
 }
 @supports (font-variant-numeric: tabular-nums) {
   .app-table th {
-    -webkit-font-feature-settings: normal;
     font-feature-settings: normal;
     font-variant-numeric: tabular-nums;
   }
